// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUICompositionDetail> renders basic example 1`] = `
<div
  className="xui-composition xui-composition-detail xui-composition-is-finite"
>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionDetail> should do nothing with children 1`] = `
<div
  className="xui-composition xui-composition-detail xui-composition-is-finite"
>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionDetail> should include custom class and omit width-limiting class, if specified 1`] = `
<div
  className="xui-composition xui-composition-detail single-without-head"
>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;
